v2/10-ADR (Architecture Decision Record).md
# 10. ADR (Architecture Decision Records)

> **형식**: 결정마다 1개
> **버전**: v1.6 (ADR-001 AT+RT Rotation 구현 반영, ADR-012 예약 생성 주체 결정 추가, ADR-013 카카오 로컬 API 위치 서비스 도입 추가)

---

## ADR-001. JWT AccessToken 단독 인증 채택

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 (최초) / 2026-04-22 (수정) |
| **상태** | 수정됨 — AT+RT Rotation 구현으로 업데이트 |
| **결정자** | 설계팀 전원 |

### 컨텍스트

회원 인증 방식을 결정해야 한다. 주요 옵션은 세션 기반, JWT AccessToken+RefreshToken, JWT AccessToken 단독이다.

### 비교

| 항목 | 세션 기반 (Spring Session + Redis) | JWT (AccessToken + RefreshToken) | JWT (AccessToken 단독) ✅ |
|------|-----------------------------------|----------------------------------|--------------------------|
| 서버 상태 | Stateful | Stateless | Stateless |
| 스케일아웃 | Redis 세션 공유 필요 | 추가 인프라 불필요 | 추가 인프라 불필요 |
| 구현 복잡도 | 낮음 | 높음 (Redis 관리 + 재발급 API) | 낮음 |
| 토큰 즉시 무효화 | 가능 (Redis 삭제) | 가능 (Redis RefreshToken 삭제) | 불가 (만료까지 대기) |
| 모바일 친화성 | 쿠키 의존 | 헤더 기반으로 유리 | 헤더 기반으로 유리 |
| 업계 표준 | 레거시 방향 | 현재 표준 | 현재 표준 |
| 3주 일정 적합성 | ✅ | ❌ (Redis TTL 동기화·탈취 대응 복잡) | ✅ |

### 결정

**JWT (AccessToken 15분 단독)** 채택 → 이후 **AT(15분) + RT(7일) Rotation**으로 업그레이드 (v2 구현 완료)

### 이유

1. 프론트엔드가 바이브코딩(웹)이나 향후 모바일 확장을 고려하면 쿠키보다 헤더 기반이 유리
2. **RefreshToken 채택**: 보안 강화를 위해 v1에서 이미 도입. Redis에 `RT:{memberId}` 형태로 저장하여 서버가 직접 제어.
3. **로그아웃/블랙리스트**: 단순 클라이언트 폐기가 아닌, 서버 Redis에 AT 블랙리스트 등록 및 RT 즉시 삭제를 통해 보안성 확보.
3. AccessToken 만료시간을 15분으로 짧게 유지하여 보안 위협 범위를 최소화
4. 단일 EC2 기준이지만 Stateless 구조로 스케일아웃 전환 비용이 낮음

### 트레이드오프 — AccessToken 즉시 무효화 문제

Stateless JWT는 기본적으로 즉시 무효화가 어렵지만, 본 프로젝트는 **Redis 블랙리스트**를 통해 이를 해결한다.

**해결 방식**:
```
- 로그아웃 → Redis에 "blacklist:{accessToken}" SET EX {남은만료시간}
- 모든 API 요청 → JwtAuthFilter에서 Redis 블랙리스트 조회
- RT Rotation → 재발급 시 기존 RT 폐기 및 새 RT 발급
```

**이 방식을 채택한 이유**:
- 로그아웃 후 탈취된 토큰이 사용되는 보안 취약점 방지
- Redis I/O 비용이 발생하나, 사용자 경험 및 보안성 향상이 더 크다고 판단
- **구현 완료**: `AuthService.logout()` 및 `JwtAuthFilter`에 반영됨

### 스케일아웃 전환 전략

| 단계 | 현재 (단일 EC2) | 스케일아웃 시 |
|------|----------------|--------------|
| 인증 | JWT AccessToken (변경 없음) | JWT AccessToken (변경 없음) — Stateless이므로 그대로 |
| 세션 공유 | 불필요 | 불필요 (JWT 덕분) |

JWT의 가장 큰 스케일아웃 이점: 서버 인스턴스가 늘어나도 인증 로직 변경 없음.

### v2 구현 완료 (2026-04-22)

RefreshToken Rotation이 구현되었다. 현재 인증 방식은 **AT(15분) + RT(7일 Redis)** 이다.

| 항목 | 구현 내용 |
|------|----------|
| RefreshToken 발급 | UUID 생성, `refresh:{token}` → `memberId` Redis 저장 (TTL 7일) |
| 토큰 재발급 API | `POST /auth/reissue` — RT 검증 후 AT 재발급, RT Rotation(새 RT 발급·기존 삭제) |
| 로그아웃 처리 | Redis에서 RT 삭제 → 즉시 무효화 |
| 탈취 대응 | 재발급 후 기존 RT 재사용 시 `LOGGED_OUT_TOKEN(A006)` 에러 반환 |

> **관련 에러코드**: `A006 LOGGED_OUT_TOKEN` — 로그아웃·재발급 후 기존 RT로 재요청 시 반환

---

## ADR-002. Lettuce 기반 Redis 분산락 채택 (동시성 제어)

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-22 (수정됨) |
| **상태** | 승인됨 |

### 컨텍스트

상품 예약 및 찜하기 시 동시에 여러 사용자가 요청할 경우 동시성 문제(Lost Update)가 발생한다.
데이터베이스 부하를 최소화하면서 확실한 정합성을 보장할 락(Lock) 전략이 필요하다.

### 비교

| 전략 | 정합성 | 성능 | 구현 난이도 | 분산 환경 | 타겟 부하 |
|------|--------|------|------------|-----------|---------|
| 비관적 락 (Pessimistic) | 완벽히 보장 | 락 대기로 인한 커넥션 병목 위험 | 낮음 | 단일 DB 의존 | DB 부하 증대 |
| Lettuce 분산락 | 확실 | DB 접근 전 Redis단 차단 | 약간 상승 (스핀락 구현) | 대응 가능 | Redis 부하 |
| Redisson 분산락 | 확실 | DB 접근 전 차단 (Pub/Sub) | 중간 (의존성 관리) | 대응 가능 | Redis 부하 |

### 결정

**Lettuce 분산락 + 비관적 락(Pessimistic Write) 병용**

### 이유

1. **Lettuce 분산락**: Redis의 SETNX를 활용하여 애플리케이션 레벨에서 먼저 락을 획득. DB 부하를 사전에 차단하고 분산 환경의 정합성을 보장.
2. **비관적 락 (Fallback)**: `SELECT ... FOR UPDATE`를 통해 DB 레벨에서도 최종적으로 데이터 보호. 분산락 해제 직후 트랜잭션 커밋 전의 찰나의 정합성 누수 방지.
3. **지수 백오프**: 스핀락 재시도 시 Redis 부하를 줄이기 위해 대기 시간을 점진적으로 늘리는 전략 채택.
4. **결과**: `TradeFacade`와 `LikeFacade`에서 Lettuce 분산락을 적용하고, `TradeService`에서 비관적 락을 병용하여 완벽한 동시성 제어 구현 완료.

### 스케일아웃 전환 전략

| 단계 | 현재 (단일 EC2) | 스케일아웃 기댓값 |
|------|----------------|--------------|
| 분산 락 | ✅ 정상 동작 (단일 Redis) | ✅ 정상 동작 — 다중 WAS 스케일아웃 시에도 단일 Redis를 바라보므로 분산 환경의 정합성을 완벽 제어 가능. |

---

## ADR-003. Redis Sorted Set 기반 인기 검색어 (Write-Through)

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-22 (수정됨) |
| **상태** | 승인됨 |

### 컨텍스트

인기 검색어는 매 요청마다 DB 집계 쿼리를 실행하면 부하가 크다. 또한 실시간성을 보장하면서도 효율적인 집계가 필요하다.

### 비교

| 항목 | Caffeine (로컬) | Redis Sorted Set (분산) ✅ |
|------|----------------|-------------|
| 실시간성 | 낮음 (배치 집계 필요) | ✅ 높음 (`ZINCRBY` 즉시 반영) |
| 집계 부하 | DB CPU 소모 | ✅ Redis 메모리 내 연산 |
| 데이터 모델 | 단순 List | ✅ 스코어 기반 자동 정렬 |
| 스케일아웃 | 인스턴스별 불일치 | ✅ 모든 서버 데이터 일관 |

### 결정

**Redis Sorted Set 기반 Write-Through 전략** 채택

### 이유

1. **Write-Through**: 검색 발생 시점에 `redisTemplate.opsForZSet().incrementScore()`를 통해 Redis에 즉시 반영하므로 별도의 DB 배치 집계 과정이 불필요함.
2. **실시간성**: 별도의 스케줄러 없이도 조작 즉시 순위가 갱신되어 사용자에게 가장 최신의 인기 검색어 제공 가능.
3. **성능**: Redis 메모리 내에서 정렬된 상태를 유지하므로 `ZREVRANGE` 쿼리 한 번으로 TOP 10을 매우 빠르게 조회 가능.
4. **확장성**: 향후 다중 서버 환경에서도 동일한 Redis를 바라보므로 데이터 일관성 완벽 보장.

### 트레이드오프

Redis 메모리를 지속적으로 사용한다. 하지만 검색어 키워드 데이터는 크기가 작아 메모리 부담이 낮으며, 필요 시 주기적으로 오래된 데이터를 정리하는 logic 추가 가능.

---

## ADR-012. Caffeine 기반 카테고리 캐싱 (Cache-Aside)

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-22 (추가) |
| **상태** | 승인됨 |

### 컨텍스트

카테고리 목록은 변경이 거의 발생하지 않지만 모든 상품 관련 페이지에서 빈번하게 조회된다.

### 결정

**Caffeine 로컬 캐시를 활용한 Cache-Aside (Lazy Loading)** 전략 채택

### 이유

1. **Cache-Aside**: 최초 요청 시에만 DB에서 조회하고 이후 메모리(JVM)에서 반환하여 DB 부하 제거.
2. **성능**: 네트워크 오버헤드가 있는 Redis보다 로컬 메모리가 훨씬 빠름.
3. **일관성**: 카테고리는 데이터 변경이 거의 없으므로 로컬 캐시 간 불일치 위험이 낮음.
4. **구현**: `@Cacheable(cacheNames = "categories")`를 통해 선언적으로 간단히 구현 완료.

---

## ADR-004. Cursor 기반 페이지네이션 채택

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |

### 컨텍스트

상품 목록은 무한 스크롤 UI를 사용한다. 페이지네이션 방식을 결정해야 한다.

### 비교

| 항목 | Offset 기반 (LIMIT/OFFSET) | Cursor 기반 (createdAt + id) |
|------|---------------------------|------------------------------|
| 구현 난이도 | 낮음 | 중간 |
| 성능 (대량 데이터) | OFFSET 커질수록 느려짐 | 일정 |
| 데이터 중복/누락 | 발생 가능 (데이터 삽입/삭제 시) | 없음 |
| 무한 스크롤 적합성 | 부적합 | ✅ 적합 |
| 페이지 직접 이동 | 가능 | 불가능 |

### 결정

**Cursor 기반 페이지네이션** 채택

### 이유

1. 중고거래 특성상 상품이 자주 등록/삭제됨 → Offset 방식은 중복/누락 발생
2. 무한 스크롤 UI → 특정 페이지 직접 이동 불필요
3. 대량 데이터에서도 일정한 성능 유지

---

## ADR-005. 채팅 메시지 MySQL 영속 저장

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |

### 컨텍스트

채팅 메시지를 어디에 저장할지 결정해야 한다.

### 비교

| 항목 | Redis Pub/Sub | MySQL 영속 저장 |
|------|---------------|----------------|
| 실시간 전송 | ✅ 우수 | ❌ (WebSocket별도) |
| 메시지 영속성 | ❌ (휘발성) | ✅ |
| 이전 메시지 조회 | ❌ 불가 | ✅ 가능 |
| 거래 증거 보존 | ❌ | ✅ |
| 구현 복잡도 | 중간 | 낮음 |

### 결정

**실시간 전송: WebSocket/STOMP + 영속 저장: MySQL** 채택

### 이유

1. 중고거래에서 채팅은 거래 증거 → 영속성 필수
2. 연결 끊김 후 재접속 시 이전 메시지 조회 필요
3. Redis Pub/Sub은 메시지 유실 위험 (구독자 없을 때 발행 시 소실)
4. Redis는 이미 분산락·세션에 활용 중이며 채팅 저장소로 추가 부담 불필요

---

## ADR-006. QueryDSL 동적 쿼리 채택

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |

### 컨텍스트

상품 검색 시 키워드, 카테고리, 상태 등 조건이 선택적으로 조합된다. 동적 쿼리 생성 방법을 결정해야 한다.

### 비교

| 항목 | JPQL + @Query | Specification | QueryDSL |
|------|---------------|---------------|---------|
| 동적 조건 처리 | 어려움 (수동 문자열 조합) | 가능 | ✅ 우수 |
| 타입 안전성 | 없음 | 있음 | ✅ 있음 |
| 가독성 | 낮음 | 중간 | ✅ 높음 |
| 컴파일 타임 오류 검출 | ❌ | 부분 | ✅ |
| 초기 설정 비용 | 없음 | 낮음 | 중간 (QClass 생성) |

### 결정

**QueryDSL** 채택 (기본 CRUD는 Spring Data JPA)

### 이유

1. 검색 조건이 keyword, categoryId, status 등 선택적 조합 → `BooleanBuilder` 패턴으로 깔끔하게 처리
2. 타입 안전성으로 오타·컬럼명 오류를 컴파일 타임에 검출
3. 실무에서 가장 널리 쓰이는 동적 쿼리 솔루션 → 학습 가치 높음

---

## ADR-007. TRADE 테이블 분리

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |

### 컨텍스트

거래 정보를 PRODUCT 테이블에 컬럼으로 둘지, 별도 TRADE 테이블로 분리할지 결정해야 한다.

### 비교

| 항목 | PRODUCT 컬럼 확장 | TRADE 테이블 분리 |
|------|------------------|------------------|
| 구현 단순성 | 단순 | 조인 필요 |
| 거래 이력 보존 | 1건만 저장 가능 | ✅ 이력 보존 |
| 재판매 지원 | 어려움 | ✅ 취소 후 재판매 가능 |
| 리뷰 연결 | 복잡 | ✅ trade_id 기준 |
| 데이터 정규화 | 위반 | ✅ 정규화 |

### 결정

**TRADE 테이블 분리** 채택

### 이유

1. 예약 취소 후 재판매가 가능해야 함 → PRODUCT.status만 SALE로 되돌리고 새 TRADE 생성
2. 거래 이력 보존 → 분쟁 대비, 리뷰 연결의 기준점
3. 리뷰가 trade_id 기준으로 연결되어야 "이 거래의 구매자만 리뷰 작성 가능" 검증 가능

---

## ADR-008. Redis Cache-Aside 패턴 채택 (도전 기능)

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | **보류 (v2 예정)** |
| **대상** | 상품 상세 조회 캐싱 |

### 결정

**Cache-Aside (Lazy Loading)** 패턴 설계 (현재 미구현, v2 도입 예정)

### 이유

1. **현상태**: 현재 `ProductService`는 직접 DB 조회를 수행함. 3주 일정 내 기능 완성도를 우선하여 캐시 레이어 도입은 v2로 미룸.
2. **전략**: 도입 시 **Cache-Aside** 방식을 채택할 예정. 중고거래 특성상 조회되는 상품만 캐싱하는 것이 효율적이기 때문.

### 이유

1. 중고거래 특성상 전체 상품 중 일부만 집중 조회됨 → 필요한 데이터만 캐시하는 Cache-Aside가 메모리 효율적
2. Write-Through는 모든 상품 등록/수정 시 캐시를 항상 갱신해야 해서 불필요한 캐시 엔트리가 쌓임
3. Write-Behind는 데이터 유실 위험이 있어 거래 데이터에 부적합

### 구현 패턴

```java
// ProductService.java
public ProductDetailResponse getProduct(Long productId) {
    String cacheKey = "product:" + productId;

    // 1. 캐시 조회
    String cached = redisTemplate.opsForValue().get(cacheKey);
    if (cached != null) {
        return objectMapper.readValue(cached, ProductDetailResponse.class); // CACHE HIT
    }

    // 2. DB 조회 (CACHE MISS)
    Product product = productRepository.findById(productId)
        .orElseThrow(() -> new NotFoundException("상품을 찾을 수 없습니다."));
    ProductDetailResponse response = ProductDetailResponse.from(product);

    // 3. 캐시 저장 (TTL 10분)
    redisTemplate.opsForValue().set(cacheKey, objectMapper.writeValueAsString(response),
        Duration.ofMinutes(10));

    return response; // CACHE MISS → DB 조회 후 캐시 저장
}

// 상품 수정/삭제 시 캐시 무효화
public void updateProduct(Long productId, UpdateProductRequest request) {
    // ... 상품 수정 로직 ...
    redisTemplate.delete("product:" + productId); // Cache Eviction
}
```

### TTL 정책

| 캐시 대상 | TTL | 이유 |
|-----------|-----|------|
| 상품 상세 | 10분 | 상태 변경(예약/판매완료)이 빈번하지 않음, 수정 시 명시적 eviction |
| 상품 목록 | 미적용 | 목록은 변화가 잦고 Cursor 조합이 무한해 캐싱 비효율 |

### 트레이드오프

현재는 캐싱 없이 직접 DB 조회 중이다. 트래픽 증가 시 인덱스 최적화(ADR-009)를 우선 적용하고, 이후 Redis Cache-Aside를 도입하여 대응한다.

---

## ADR-009. EXPLAIN 기반 인덱스 최적화 전략

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |
| **대상** | MySQL 8 인덱스 설계 |

### 컨텍스트

처음부터 모든 컬럼에 인덱스를 걸면 되는 것 아닌가? 라는 질문에 답해야 한다. 인덱스 설계 전략을 결정해야 한다.

### 왜 처음부터 모든 인덱스를 걸지 않는가?

| 항목 | 설명 |
|------|------|
| 쓰기 성능 저하 | 인덱스가 많을수록 INSERT/UPDATE/DELETE 시 B-Tree 갱신 비용 증가 |
| 불필요한 인덱스 | 실제 쿼리 패턴과 다른 인덱스는 옵티마이저 혼란, 메모리 낭비 |
| 복합 인덱스 순서 | 컬럼 순서가 틀리면 인덱스를 전혀 타지 않음 |

### 결정

**실제 쿼리 작성 후 EXPLAIN으로 실행 계획 확인 → 필요한 인덱스만 추가** 전략 채택

### EXPLAIN 분석 기준

```sql
-- 예시: 상품 검색 쿼리
EXPLAIN SELECT * FROM product
WHERE status = 'SALE' AND category_id = 12
ORDER BY created_at DESC
LIMIT 20;
```

| EXPLAIN 컬럼 | 확인 기준 | 나쁜 신호 |
|-------------|-----------|-----------|
| `type` | `ref`, `range`, `index` | `ALL` (풀 테이블 스캔) |
| `key` | 인덱스명 표시 | `NULL` (인덱스 미사용) |
| `rows` | 적을수록 좋음 | 전체 행 수에 근접 |
| `Extra` | `Using index` | `Using filesort`, `Using temporary` |

### 우선 최적화 대상 쿼리 목록

| 쿼리 | 현재 인덱스 계획 | EXPLAIN 목표 |
|------|----------------|-------------|
| 상품 목록 (status + created_at) | `(status, created_at DESC)` | type=range, Using index |
| 카테고리 검색 (category_id + status) | `(category_id, status)` | type=ref |
| 제목 키워드 검색 | `FULLTEXT(title)` | type=fulltext (LIKE 대비 성능 대폭 향상) |
| 채팅 이력 최신순 | `(chat_room_id, id DESC)` | type=ref, Using index |

### FULLTEXT vs LIKE 비교

| 항목 | `LIKE '%키워드%'` | `FULLTEXT` |
|------|-----------------|------------|
| 인덱스 사용 | ❌ 앞 와일드카드 시 풀스캔 | ✅ 역색인 사용 |
| 성능 | 데이터 많을수록 급격히 저하 | 일정 수준 유지 |
| 설정 | 없음 | `FULLTEXT INDEX` 생성 필요 |
| 최소 토큰 길이 | 무관 | `innodb_ft_min_token_size=2` 설정 필요 (한글 2자) |

```sql
-- FULLTEXT 인덱스 생성
ALTER TABLE product ADD FULLTEXT INDEX ft_title (title) WITH PARSER ngram;

-- FULLTEXT 쿼리
SELECT * FROM product WHERE MATCH(title) AGAINST('침대 프레임' IN BOOLEAN MODE);
```

### 트레이드오프

FULLTEXT는 초기 설정(ngram parser, min_token_size)이 필요하다. 3주 일정 내 구현이 어려우면 `LIKE '키워드%'` (앞 와일드카드 제거)로 시작하고 FULLTEXT는 QA 주에 적용한다.

---

## ADR-010. WebSocket + STOMP 채택 (vs SSE, Long Polling)

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |
| **대상** | 1:1 실시간 채팅 |

### 컨텍스트

구매자-판매자 간 실시간 채팅을 구현해야 한다. 실시간 통신 방식을 결정해야 한다.

### 비교

| 항목 | Long Polling | SSE | WebSocket + STOMP |
|------|-------------|-----|-------------------|
| 방향 | 단방향 (서버→클라이언트) | 단방향 (서버→클라이언트) | ✅ 양방향 |
| 연결 방식 | HTTP 반복 요청 | HTTP 지속 연결 | TCP 지속 연결 |
| 메시지 전송 | 클라이언트→서버: 별도 HTTP POST | 클라이언트→서버: 별도 HTTP POST | ✅ 단일 연결로 송수신 |
| 서버 부하 | 높음 (반복 HTTP) | 낮음 | 낮음 |
| 구현 복잡도 | 낮음 | 낮음 | 중간 |
| 채팅 적합성 | 부적합 | 부적합 (단방향) | ✅ 적합 |
| Spring 지원 | ✅ | ✅ | ✅ `spring-websocket` |

### 결정

**WebSocket + STOMP** 채택

### WebSocket 인증 정책

- JWT는 **STOMP CONNECT 시점에만 1회 검증**한다.
- 연결 후 AccessToken 만료만으로 기존 WebSocket 세션을 강제 종료하지 않는다.
- 이후 메시지 수신 시에는 토큰 재검증 대신 **chatRoom 참여자 여부**만 확인한다.
- 이유: 3주 일정 내 구현 복잡도를 낮추기 위함이다. AT+RT Rotation 도입 이후에도 STOMP CONNECT 시 AT 1회 검증 후 WebSocket 세션을 유지하는 정책은 동일하게 적용된다.

### 이유

1. 채팅은 본질적으로 **양방향** 통신 — SSE는 서버→클라이언트 단방향만 지원하므로 메시지 전송에 별도 HTTP POST가 필요해 구조가 복잡해짐
2. Long Polling은 메시지마다 새 HTTP 연결을 맺어 불필요한 오버헤드 발생
3. STOMP 프로토콜은 발행/구독(pub/sub) 패턴을 추상화하여 채팅방 라우팅 구현이 간결함
4. `spring-websocket` + `spring-messaging` 의존성만으로 구현 가능

### STOMP 선택 이유 (순수 WebSocket 대비)

```
순수 WebSocket:
  - 텍스트 프레임을 직접 처리해야 함
  - 채팅방 라우팅, 브로드캐스트 로직을 직접 구현

STOMP over WebSocket:
  - SUBSCRIBE /topic/room.{id} → 자동 라우팅
  - SEND /app/chat.sendMessage → @MessageMapping으로 수신
  - SimpleBroker가 구독자 관리 자동화
```

### 트레이드오프

WebSocket은 HTTP/2 멀티플렉싱과 달리 연결당 하나의 소켓을 유지한다. 동시 접속자가 수천 명이 되면 서버 소켓 리소스가 문제될 수 있다. 현재 규모(수십~수백 명)에서는 문제없으며, 스케일 필요 시 STOMP External Broker(RabbitMQ/Redis)로 전환한다.

---

## ADR-011. GitHub Actions + ECR + EC2 SSH 배포 자동화

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-09 |
| **상태** | 승인됨 |
| **대상** | CI/CD 파이프라인 |

### 컨텍스트

코드 변경 → 프로덕션 반영까지의 배포 파이프라인을 자동화해야 한다. AWS 배포 방식을 결정해야 한다.

### 비교

| 항목 | GitHub Actions + SSH | AWS CodeDeploy | ECS (Fargate) |
|------|---------------------|---------------|---------------|
| 설정 복잡도 | 낮음 | 중간 | 높음 |
| 비용 | Actions 무료(공개) / EC2 비용만 | CodeDeploy 무료 + EC2 | Fargate 태스크 비용 추가 |
| Blue/Green 배포 | ❌ 수동 구성 필요 | ✅ 내장 | ✅ 내장 |
| 경력 3개월 팀 적합성 | ✅ 높음 | 중간 | 낮음 |
| 학습 목적 | ✅ 전체 흐름 이해에 적합 | 블랙박스 많음 | 블랙박스 많음 |

### 결정

**GitHub Actions + ECR + EC2 SSH 방식** 채택

### 이유

1. **학습 목적에 최적**: 빌드 → 이미지 빌드 → ECR push → EC2 pull → 컨테이너 재시작의 전 흐름을 직접 작성하므로 CI/CD 전체를 이해할 수 있음
2. **추가 서비스 비용 없음**: CodeDeploy agent 설정, ECS 추가 비용 불필요
3. **3주 일정에 적합**: GitHub Actions YAML은 공식 문서와 예시가 풍부해 빠르게 구현 가능

### 왜 Blue/Green을 적용하지 않는가?

```
Blue/Green 미적용 이유:
  - 단일 EC2 인스턴스 환경에서 Blue/Green은 서버 2대 필요
  - 3주 프로젝트에서 다운타임 1~2분은 허용 범위
  - docker-compose down → up 방식으로 재시작 시간 최소화

향후 확장 시:
  - ALB(Application Load Balancer) + Auto Scaling Group + CodeDeploy로 전환
  - 또는 ECS Fargate + ECR + CodePipeline으로 전환
```

### 배포 단계별 Secrets 관리

| Secret 키 | 용도 | 저장 위치 |
|-----------|------|-----------|
| `AWS_ACCESS_KEY_ID` | ECR 로그인, EC2 접근 | GitHub Secrets |
| `AWS_SECRET_ACCESS_KEY` | 위와 동일 | GitHub Secrets |
| `EC2_HOST` | SSH 접속 IP | GitHub Secrets |
| `EC2_SSH_KEY` | PEM 키 내용 | GitHub Secrets |
| `DB_PASSWORD` | RDS 비밀번호 | EC2 `.env` 파일 또는 AWS Secrets Manager |
| `JWT_SECRET` | JWT 서명 키 | EC2 `.env` 파일 또는 AWS Secrets Manager |

> **보안 원칙**: DB 비밀번호, JWT 시크릿은 GitHub Secrets에 저장하지 않는다. EC2 인스턴스의 `.env` 파일에만 저장하고 GitHub Actions는 SSH로 `docker-compose up`만 실행한다.

### 트레이드오프

SSH 방식은 EC2가 재기동되면 IP가 바뀔 수 있다. 반드시 **Elastic IP**를 EC2에 연결하여 고정 IP를 사용해야 한다. 또한 SSH 포트(22)는 GitHub Actions IP 대역이 아닌 개발자 고정 IP만 허용하는 것이 원칙이나, GitHub Actions의 IP는 동적이므로 `appleboy/ssh-action`을 쓸 때는 일시적으로 22포트를 열어두거나 AWS Systems Manager Session Manager로 대체하는 것을 권장한다.

---

## ADR-012. 예약 생성 주체 — 구매자 주도 채택

| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-23 |
| **상태** | 승인됨 |
| **대상** | 상품 예약(RESERVED) 상태 전환 주체 |

### 컨텍스트

중고거래에서 상품 예약을 누가 생성할 것인지 결정해야 한다. 초기 설계 단계에서 두 가지 시나리오가 논의되었다.

- **구매자 주도**: 구매자가 상품 상세 페이지에서 "예약하기"를 클릭하면 즉시 RESERVED 상태로 전환
- **판매자 주도**: 구매자-판매자 채팅 합의 후, 판매자가 특정 구매자를 지목하여 예약 확정

두 방식 모두 장단점이 있으며, 동시성 처리와 사용자 경험 측면에서 상충 관계가 존재했다.

### 비교

| 항목 | 구매자 주도 ✅ | 판매자 주도 |
|------|--------------|------------|
| UX 직관성 | ✅ "예약하기" 클릭 → 즉시 예약 | 채팅 → 판매자 별도 행동 대기 (2단계) |
| 동시성 위험 | △ 다수 구매자 동시 요청 가능 → 분산락으로 해결 | ✅ 판매자 1명만 생성 → 경합 없음 |
| 악의적 예약 위험 | △ 반복 예약 시도 가능 → 중복 예약 방지 로직으로 제한 | ✅ 판매자 의사 없이 예약 불가 |
| 판매자 최종 결정권 | ✅ 거래 확정(TRADING) 단계에서 판매자 명시적 승인 필요 | ✅ 판매자가 예약 자체를 생성 |
| 플랫폼 UX 표준 | ✅ 당근마켓·번개장터 방식과 동일 | ❌ 비표준 흐름 — 사용자 학습 비용 발생 |
| 구현 복잡도 | 중간 (분산락 필요) | 높음 (판매자가 채팅 상대방을 지목하는 UI·로직 필요) |

### 결정

**구매자 주도** 채택, Lettuce SETNX 분산락 병행 적용 (ADR-002 참조)

### 이유

1. **플랫폼 UX 일관성**: 주요 중고거래 플랫폼의 표준 흐름으로, 사용자가 "예약하기" 클릭 한 번으로 의사를 표현할 수 있어 마찰이 가장 낮다.
2. **동시성은 분산락으로 해결**: 다수 구매자의 동시 예약 요청은 Lettuce SETNX 기반 `LockService`가 선착순 1건만 성공하도록 보장한다. 이미 분산락 인프라가 구축되어 있어 추가 비용 없이 적용 가능하다.
3. **판매자 최종 결정권은 별도 단계로 보존**: 구매자가 예약을 생성하더라도 판매자가 **RESERVED → TRADING** 단계에서 "거래 확정"을 명시적으로 수행해야 실질적인 거래가 시작된다. 판매자는 원치 않는 구매자와의 거래를 거부할 수 있다.
4. **악의적 예약의 실질적 위협 제한**: 같은 상품에 중복 RESERVED를 허용하지 않는 비즈니스 로직과, 거래 확정 단계의 판매자 승인권이 결합되어 악의적 예약의 실질적 피해를 최소화한다.

### 현행 거래 상태 흐름

```
구매자: 예약하기 클릭   →  PRODUCT: SALE → RESERVED  /  TRADE: 생성(RESERVED)
판매자: 거래 확정       →  TRADE: RESERVED → TRADING  (PRODUCT 상태 유지)
구매자: 거래 완료 확인  →  TRADE: TRADING → SOLD      /  PRODUCT: RESERVED → SOLD_OUT
구매자: 리뷰 작성       →  TRADE: SOLD → REVIEWED
```

### 트레이드오프

구매자가 예약 후 응답하지 않거나 거래를 이행하지 않으면 상품이 RESERVED 상태에 묶일 수 있다. 이를 방지하기 위해 판매자는 거래를 취소하고 PRODUCT를 SALE 상태로 되돌릴 수 있는 예약 취소 기능을 제공한다.

---

## ADR-013. 카카오 로컬 API 기반 위치 인증 및 근처 상품 조회 도입
| 항목 | 내용 |
|------|------|
| **날짜** | 2026-04-23 |
| **상태** | 승인됨 |
| **대상** | 동네 인증, 위치 기반 상품 탐색, 근처 상품 조회 |
### 컨텍스트
초기에는 위치 기능을 필수 범위로 보지 않았다. 

그러나 중고거래는 상품 정보뿐 아니라 판매자와 구매자가 실제로 만날 수 있는 거리와 지역인지가 거래 성사에 큰 영향을 준다.

인증된 동네와 상품 위치를 기준으로 거리 정보를 제공하면, 판매자는 거래 가능성을 빠르게 판단할 수 있고 구매자는 내 주변 상품을 우선 탐색할 수 있다. 

따라서 위치 기능은 단순 지도 표시가 아니라 거래 성공률을 높이는 핵심 보조 정보라고 판단했다.

### 비교
| 항목 | 위치기능 미도입 | 카카오 로컬 API + 카카오맵 도입 |
|------|----------|---------------|
| 거래 가능 지역 판단 | 상품 정보·채팅에 의존 | ✅ 인증된 동네 및 거리 기반으로 판단 가능 |
| 판매자 입장 판단 비용 | 채팅 후에야 거래 가능 거리 확인 | ✅ 목록/상세에서 빠르게 판단 가능 |
| 구매자 탐색 효율 | 전체 상품을 동일하게 탐색 | ✅ 내 주변 상품 중심 탐색 가능 |
| 불필요한 채팅 발생 | 많음 | 감소 |
| 거래 성사 가능성 예측 | 어려움 | ✅ 상대적으로 쉬움 |
| 구현 복잡도 | 낮음 | 중간 (외부 API 연동, 좌표/주소 처리 필요) |
| 국내 주소 체계 적합성 | 별도 처리 필요 | ✅ 카카오 로컬 API가 국내 주소·행정동 처리에 적합 |

### 결정
**카카오 로컬 API + 카카오맵 JavaScript SDK 기반 위치 인증 및 근처 상품 조회 기능**을 도입한다.
- GPS 또는 주소 입력을 통해 사용자의 동네를 인증한다.
- 인증된 위치 정보를 회원 기준으로 저장한다.
- 상품은 등록 시 회원의 인증 위치 정보를 따른다.
- 사용자는 내 주변 상품 목록과 지도 기반 탐색 기능을 통해 근처 상품을 조회할 수 있다.
### 이유
1. 중고거래는 일반 이커머스와 달리 실제 만남이 가능한 거리인지가 거래 성사에 직접적인 영향을 준다.
2. 판매자는 구매자의 인증된 동네와 상품 간 거리를 보고, 거래 가능성이 높은 상대인지 빠르게 판단할 수 있다.
3. 구매자는 자신의 생활 반경 내 상품을 우선적으로 탐색함으로써 거래 효율을 높일 수 있다.
4. 위치 기반 정보는 단순 편의 기능이 아니라, 거래 실패 가능성을 줄이고 거래 성공률을 높이는 판단 근거로 작동한다.
5. 카카오 로컬 API와 카카오맵 JavaScript SDK는 국내 주소 체계, 행정동 기반 위치 표현, 지도 시각화에 적합하여 서비스 성격과 잘 맞는다.
### 구현 방향
```text
회원가입/마이페이지 → 동네 인증
동네 인증 완료 → 회원 위치(location, locationName, radius) 저장
상품 등록 → 회원의 인증 위치를 상품 위치로 반영
홈/내 근처 상품 페이지 → 인증 위치 기준 반경 내 상품 조회
지도 UI → 내 위치 + 상품 위치 마커 표시
```

### 기대 효과
| 대상 | 	기대 효과                     |
|--------|----------------------------|
|판매자	| 거래 가능한 거리의 구매자인지 빠르게 판단 가능 |
|구매자 | 내 주변 상품을 우선 탐색 가능          |
|서비스 전체	| 불필요한 문의 및 채팅 감소, 거래 성사율 상승 |
### 트레이드오프
브라우저 GPS는 PC 환경이나 유선 네트워크 환경에서 정확도가 낮을 수 있다. 이를 보완하기 위해 **직접 주소 입력 기반 인증 흐름**을 함께 제공한다.
외부 API 의존성이 생기므로 카카오 API 키 관리, 도메인 등록, 서비스 활성화 등 운영 설정이 필요하다.
위치 정보는 거래 편의성을 높이지만 민감한 정보이므로, 정확한 좌표 전체를 노출하기보다 **동네명 및 거리 중심의 정보 제공**을 우선한다.
### 결론
카카오맵 API 기반 위치 기능은 단순 지도 표시 기능이 아니라, 구매자와 판매자 간의 실제 거래 가능 거리와 지역을 명확히 보여줌으로써 **중고거래의 현실적인 성사 가능성을 높이기 위한 아키텍처적 결정**이다.
